# hestia

./: .gitignore  README.md  main.py  notes.md  pyproject.toml  test_main.py
hera/: ancillary.py  database.py  main.py  obsolete.py  person.py  random_data.py
tests/: test_main.py
